--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -37,6 +37,10 @@ $max_font: 70px;
   .introduction {
     padding: 15% 5%;
   }
+  .illustration {
+    max-width: 40vw;
+    margin-top: 5vh;
+  }
   svg {
     position: absolute;
   }
