--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,19 +1,4 @@
-$primary-color: #0B7BC5;
-$screen-sm-min: 768px;
-$screen-md-min: 992px;
-$screen-lg-min: 1200px;
-
-@mixin canvas($bg-color) {
-  height: 100vh;
-  width: 100vw;
-  background: $bg-color;
-}
-
-@mixin colored-element() {
-  color: white;
-  background: $primary-color;
-  border: none;
-}
+@import '../variables';
 
 .header {
   @include canvas(white);
