--- a/src/components/Profile.scss
+++ b/src/components/Profile.scss
@@ -1,36 +1,28 @@
-$primary-color: #0B7BC5;
-$screen-sm-min: 768px;
-$screen-md-min: 992px;
-$screen-lg-min: 1200px;
-
-@mixin canvas($bg-color) {
-  height: 100vh;
-  width: 100vw;
-  background: $bg-color;
-}
-
-@mixin absolute($top, $left) {
-  margin: 0;
-  position: absolute;
-  top: $top;
-  left: $left;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-@mixin colored-element() {
-  color: white;
-  background: $primary-color;
-  border: none;
-}
+@import '../variables';
 
 .profile {
   @include canvas(#E7E7E7);
   position: relative;
   padding-top: 20px;
   .avatar {
-    @include absolute(0%, 70%);
-    z-index: 1;
+    z-index: 2;
+    width: 10vw;
+    height:10vw;
+    @media (max-width: $screen-sm-min) {
+      @include absolute(50%, 70%);
+      width: 30vw;
+      height: 30vw;
+    }
+    @media (min-width: $screen-sm-min) {
+      @include absolute(45%, 70%);
+      width: 15vw;
+      height: 15vw;
+    }
+    @media (min-width: $screen-md-min) {
+      @include absolute(20%, 75%);
+      max-width: 150px;
+      max-height:150px;
+    }
   }
   .blob-md {
     @include absolute(50%, 10%);
@@ -49,19 +41,24 @@ $screen-lg-min: 1200px;
   }
   .container {
     @include absolute(50%, 50%);
+    z-index: 1;
     @media (max-width: $screen-sm-min) {
       width: 95vw;
       border-radius: 30px;
     }
     @media (min-width: $screen-sm-min) {
       width: 90vw;
-      height: 60vh;
       border-radius: 30px;
     }
     @media (min-width: $screen-md-min) {
-      width: 70vw;
+      max-width: 1100px;
       height: 60vh;
       border-radius: 30px;
+    }
+  }
+  .about {
+    @media (min-width: $screen-md-min) {
+      padding-right: 20px;
     }
   }
 }
