--- a/src/components/Profile.scss
+++ b/src/components/Profile.scss
@@ -5,6 +5,7 @@
   position: relative;
   padding-top: 20px;
   .avatar {
+    @include elevate();
     z-index: 2;
     width: 10vw;
     height:10vw;
@@ -40,6 +41,7 @@
     height: 100vh;
   }
   .container {
+    @include elevate();
     @include absolute(50%, 50%);
     z-index: 1;
     @media (max-width: $screen-sm-min) {
