--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,10 @@ $screen-sm-min: 768px;
 $screen-md-min: 992px;
 $screen-lg-min: 1200px;
 
+@mixin elevate() {
+  box-shadow: 0px 0px 19px -2px rgba(0, 0, 0, 0.192);
+}
+
 @mixin canvas($bg-color) {
   min-height: 100vh;
   width: 100vw;
